# Docker-Compose-Blitz-SD

./: README.md  app.py  docker-compose.yml  dockerfile  nginx.conf  pyproject.toml
templates/: index.html
